# exint

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
benches/: Cargo.toml  bench.rs  lib.rs
crates/exint-integer/: Cargo.toml  README.md
crates/exint-integer/src/: lib.rs
crates/exint-integer/src/errors/: mod.rs
crates/exint-integer/src/macros/: byteorder.rs  constants.rs  internals.rs  mod.rs  parse_str.rs  utilities.rs
crates/exint-integer/src/macros/arithmetic/: bigint.rs  checked.rs  generic.rs  mod.rs  overflowing.rs  saturating.rs  strict.rs  unbounded.rs  unchecked.rs  wrapping.rs
crates/exint-integer/src/macros/binary/: convert.rs  inspect.rs  mod.rs
crates/exint-integer/src/panic/: mod.rs
crates/exint-integer/src/traits/: clone.rs  cmp.rs  convert.rs  default.rs  fmt.rs  hash.rs  iter.rs  marker.rs  mod.rs  ops.rs  random.rs  str.rs
crates/exint-integer/src/types/: alias.rs  mod.rs  sint.rs  uint.rs
crates/exint-integer/src/value/: mod.rs
exint-macro/: Cargo.toml  README.md
exint-macro/src/: error.rs  lib.rs
exint-macro/src/backports/: mod.rs  quote.rs  to_tokens.rs
exint-macro/src/expanders/: mod.rs  uint.rs
exint-macro/src/utilities/: mod.rs  span.rs  xpand.rs
lib/exint-backend/: Cargo.toml
lib/exint-backend/src/: export.rs  lib.rs  limbs.rs  macros.rs  traits.rs  utils.rs
lib/exint-backend/src/impls/: fallback.rs
lib/exint-backend/src/impls/unstable/: base.rs  core.rs  lang.rs  spec.rs
lib/exint-integer/: Cargo.toml
lib/exint-integer/src/: alias.rs  error.rs  lib.rs  panic.rs  parse.rs
lib/exint-integer/src/docs/int/: BITS.md  MAX.md  MIN.md  abs.md  abs_diff.md  borrowing_sub.md  carrying_add.md  carrying_mul.md  carrying_mul_add.md  cast_unsigned.md  checked_abs.md  checked_add.md  checked_add_unsigned.md  checked_div.md  checked_div_euclid.md  checked_ilog.md  checked_ilog10.md  checked_ilog2.md  checked_isqrt.md  checked_mul.md  checked_neg.md  checked_next_multiple_of.md  checked_pow.md  checked_rem.md  checked_rem_euclid.md  checked_shl.md  checked_shr.md  checked_sub.md  checked_sub_unsigned.md  convert_from_bool.md  convert_i16_nonzero.md  convert_i32_nonzero.md  convert_i8_atomic.md  convert_i8_nonzero.md  count_ones.md  count_zeros.md  div_ceil.md  div_euclid.md  div_floor.md  from_ascii.md  (+92 more)
lib/exint-integer/src/docs/int/Saturating/: BITS.md  MAX.md  MIN.md  count_ones.md  count_zeros.md  from_be.md  from_be_bytes.md  from_le.md  from_le_bytes.md  from_ne_bytes.md  isolate_least_significant_one.md  isolate_most_significant_one.md  leading_ones.md  leading_zeros.md  reverse_bits.md  rotate_left.md  rotate_right.md  swap_bytes.md  to_be.md  to_be_bytes.md  to_le.md  to_le_bytes.md  to_ne_bytes.md  trailing_ones.md  trailing_zeros.md
lib/exint-integer/src/docs/int/Strict/: BITS.md  MAX.md  MIN.md  count_ones.md  count_zeros.md  from_be.md  from_be_bytes.md  from_le.md  from_le_bytes.md  from_ne_bytes.md  isolate_least_significant_one.md  isolate_most_significant_one.md  leading_ones.md  leading_zeros.md  reverse_bits.md  rotate_left.md  rotate_right.md  swap_bytes.md  to_be.md  to_be_bytes.md  to_le.md  to_le_bytes.md  to_ne_bytes.md  trailing_ones.md  trailing_zeros.md
lib/exint-integer/src/docs/int/Wrapping/: BITS.md  MAX.md  MIN.md  count_ones.md  count_zeros.md  from_be.md  from_be_bytes.md  from_le.md  from_le_bytes.md  from_ne_bytes.md  isolate_least_significant_one.md  isolate_most_significant_one.md  leading_ones.md  leading_zeros.md  reverse_bits.md  rotate_left.md  rotate_right.md  swap_bytes.md  to_be.md  to_be_bytes.md  to_le.md  to_le_bytes.md  to_ne_bytes.md  trailing_ones.md  trailing_zeros.md
lib/exint-integer/src/docs/uint/: BITS.md  MAX.md  MIN.md  abs_diff.md  as_ascii.md  borrowing_sub.md  carrying_add.md  carrying_mul.md  carrying_mul_add.md  cast_signed.md  checked_add.md  checked_add_signed.md  checked_div.md  checked_div_euclid.md  checked_ilog.md  checked_ilog10.md  checked_ilog2.md  checked_mul.md  checked_neg.md  checked_next_multiple_of.md  checked_next_power_of_two.md  checked_pow.md  checked_rem.md  checked_rem_euclid.md  checked_shl.md  checked_shr.md  checked_signed_diff.md  checked_sub.md  checked_sub_signed.md  convert_from_bool.md  convert_u128_atomic.md  convert_u128_nonzero.md  convert_u16_nonzero.md  convert_u64_nonzero.md  convert_u8_atomic.md  convert_u8_char.md  count_ones.md  count_zeros.md  disjoint_bitor.md  div_ceil.md  (+107 more)
lib/exint-integer/src/docs/uint/Saturating/: BITS.md  MAX.md  MIN.md  count_ones.md  count_zeros.md  from_be.md  from_be_bytes.md  from_le.md  from_le_bytes.md  from_ne_bytes.md  isolate_least_significant_one.md  isolate_most_significant_one.md  leading_ones.md  leading_zeros.md  reverse_bits.md  rotate_left.md  rotate_right.md  swap_bytes.md  to_be.md  to_be_bytes.md  to_le.md  to_le_bytes.md  to_ne_bytes.md  trailing_ones.md  trailing_zeros.md
lib/exint-integer/src/docs/uint/Strict/: BITS.md  MAX.md  MIN.md  count_ones.md  count_zeros.md  from_be.md  from_be_bytes.md  from_le.md  from_le_bytes.md  from_ne_bytes.md  isolate_least_significant_one.md  isolate_most_significant_one.md  leading_ones.md  leading_zeros.md  reverse_bits.md  rotate_left.md  rotate_right.md  swap_bytes.md  to_be.md  to_be_bytes.md  to_le.md  to_le_bytes.md  to_ne_bytes.md  trailing_ones.md  trailing_zeros.md
lib/exint-integer/src/docs/uint/Wrapping/: BITS.md  MAX.md  MIN.md  count_ones.md  count_zeros.md  from_be.md  from_be_bytes.md  from_le.md  from_le_bytes.md  from_ne_bytes.md  isolate_least_significant_one.md  isolate_most_significant_one.md  leading_ones.md  leading_zeros.md  reverse_bits.md  rotate_left.md  rotate_right.md  swap_bytes.md  to_be.md  to_be_bytes.md  to_le.md  to_le_bytes.md  to_ne_bytes.md  trailing_ones.md  (+1 more)
lib/exint-integer/src/types/: mod.rs
lib/exint-integer/src/types/define/: sint.rs  uint.rs
lib/exint-integer/src/types/macros/: byteorder.rs  internals.rs  mod.rs  parse_str.rs
lib/exint-integer/src/types/traits/: cmp.rs  fmt.rs  iter.rs  mod.rs  ops.rs  random.rs  str.rs
lib/exint-integer/src/utils/: cast.rs  mod.rs
src/: lib.rs  (+7 more)
(+849 files in other folders)
