[package]
name = "exint"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]
exclude = [
  "tools/mkdocs",
]
members = [
  "lib/exint-backend",
  "lib/exint-integer",
]

[dependencies]
exint-backend = { path = "lib/exint-backend", version = "=0.1.0", default-features = false }
exint-integer = { path = "lib/exint-integer", version = "=0.1.0", default-features = false }

[features]
default = [
  "all_backend",
  "all_nightly",
  "all_unstable",
  "std",
  "unstable_internals",
]

# ------------------------------------------------------------------------------
# Features - Groups
# ------------------------------------------------------------------------------

all_backend = [
  "const_trait_impl",
  "core_intrinsics",
  "min_specialization",
]

all_nightly = [
  "adt_const_params",
  "ascii_char",
  "disjoint_bitor",
  "f16",
  "f128",
  "integer_atomics",
  "never_type",
  "random",
  "step_trait",
  "structural_match",
  "trusted_step",
  "unsized_const_params",
]

all_unstable = [
  "bigint_helper_methods",
  "int_from_ascii",
  "int_roundings",
  "is_ascii_octdigit",
  "isolate_most_least_significant_one",
  "mixed_integer_ops_unsigned_sub",
  "strict_overflow_ops",
  "unchecked_neg",
  "unchecked_shifts",
  "unsigned_signed_diff",
  "utf16_extra",
  "wrapping_next_power_of_two",
]

# ------------------------------------------------------------------------------
# Features - Markers
# ------------------------------------------------------------------------------

std = ["exint-integer/std"]

unstable_internals = []

# ------------------------------------------------------------------------------
# Features - Backend
# ------------------------------------------------------------------------------

const_trait_impl = ["exint-integer/const_trait_impl"]
core_intrinsics = ["exint-integer/core_intrinsics"]
min_specialization = ["exint-integer/min_specialization"]

# ------------------------------------------------------------------------------
# Features - Nightly
# ------------------------------------------------------------------------------

adt_const_params = ["exint-integer/adt_const_params"]
ascii_char = ["exint-integer/ascii_char"]
disjoint_bitor = ["exint-integer/disjoint_bitor"]
f16 = ["exint-integer/f16"]
f128 = ["exint-integer/f128"]
integer_atomics = ["exint-integer/integer_atomics"]
never_type = ["exint-integer/never_type"]
random = ["exint-integer/random"]
step_trait = ["exint-integer/step_trait"]
structural_match = ["exint-integer/structural_match"]
trusted_step = ["exint-integer/trusted_step"]
unsized_const_params = ["exint-integer/unsized_const_params"]

# ------------------------------------------------------------------------------
# Features - Unstable
# ------------------------------------------------------------------------------

bigint_helper_methods = ["exint-integer/bigint_helper_methods"]
int_from_ascii = ["exint-integer/int_from_ascii"]
int_roundings = ["exint-integer/int_roundings"]
is_ascii_octdigit = ["exint-integer/is_ascii_octdigit"]
isolate_most_least_significant_one = ["exint-integer/isolate_most_least_significant_one"]
mixed_integer_ops_unsigned_sub = ["exint-integer/mixed_integer_ops_unsigned_sub"]
strict_overflow_ops = ["exint-integer/strict_overflow_ops"]
unchecked_neg = ["exint-integer/unchecked_neg"]
unchecked_shifts = ["exint-integer/unchecked_shifts"]
unsigned_signed_diff = ["exint-integer/unsigned_signed_diff"]
utf16_extra = ["exint-integer/utf16_extra"]
wrapping_next_power_of_two = ["exint-integer/wrapping_next_power_of_two"]

# ------------------------------------------------------------------------------
# Rustc Lints
# https://doc.rust-lang.org/rustc/lints/index.html
# ------------------------------------------------------------------------------

[workspace.lints.rust]
# Lint Groups
warnings = { level = "deny", priority = -1 }
deprecated-safe = { level = "deny", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }

# Standalone Lints
ambiguous_negative_literals = "deny"
ffi_unwind_calls = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
non_ascii_idents = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
single_use_lifetimes = "allow" # allow because noisy
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unnameable_types = "deny"
unreachable_pub = "deny"
unsafe_code = "allow" # allow because we define and use unsafe APIs
unstable_features = "allow" # allow because we allow user-enabled features
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unused_results = "deny"
variant_size_differences = "deny"

# Standalone Lints (unstable)
# closure_returning_async_block = "deny"
# fuzzy_provenance_casts = "deny"
# lossy_provenance_casts = "deny"
# multiple_supertrait_upcastable = "deny"
# must_not_suspend = "deny"
# non_exhaustive_omitted_patterns = "deny"
# unqualified_local_imports = "deny"

# ------------------------------------------------------------------------------
# Clippy Lints
# https://doc.rust-lang.org/clippy
# ------------------------------------------------------------------------------

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }

# pedantic noise
cast_possible_truncation = "allow"
doc_markdown = "allow"
if_not_else = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
unreadable_literal = "allow"
unused_self = "allow"

# ------------------------------------------------------------------------------
# Rustdoc Lints
# https://doc.rust-lang.org/rustdoc/lints.html
# ------------------------------------------------------------------------------

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
missing_crate_level_docs = "deny"
# missing_doc_code_examples = "deny" # unstable
private_doc_tests = "deny"
private_intra_doc_links = "deny"
redundant_explicit_links = "deny"
unescaped_backticks = "deny"
